# footballnews

./: fetched_page.html  main.py  pyproject.toml
fantasy_agent/: scrap.py
