[tool.poetry]
name = "fantasy-agent"
version = "0.1.0"
description = ""
authors = ["yhu"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
selenium = "^4.24.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
